# py-docsnap

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/docsnap/: __init__.py  cli.py
tests/: test_cli.py
